# sfrl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  source.txt
codeblocks_win_project/: sfrl.cbp
include/: ai.hpp  att.hpp  config.hpp  fov.hpp  game.hpp  map.hpp  mapgen.hpp  mon.hpp  msg.hpp  render.hpp  ter.hpp  ter_trait.hpp  time.hpp  utils.hpp
include/curses/: io.hpp
include/ncurses/: io.hpp
include/sdl/: io.hpp
src/: ai.cpp  att.cpp  fov.cpp  game.cpp  main.cpp  map.cpp  mapgen.cpp  mon.cpp  msg.cpp  render.cpp  ter.cpp  ter_trait.cpp  time.cpp  utils.cpp
src/curses/: io.cpp
src/ncurses/: io.cpp
src/sdl/: io.cpp
